alambert    2005/11/04 06:56:15 UTC	(20051104-3451)
  Log:
  XMLRPC: a lot of folks are using the explorer script, add it to contrib/

  Changes:	Modified:
  +99 -0	trunk/contrib/xmlrpc_explorer.php (File Added) 


alambert    2005/11/04 06:47:38 UTC	(20051104-3449)
  Log:
  XMLRPC: rename atheme.x.y_metadata to atheme.x.metadata.y

  Changes:	Modified:
  +12 -12	trunk/modules/xmlrpc/account.c (File Modified) 
  +12 -12	trunk/modules/xmlrpc/channel.c (File Modified) 


alambert    2005/11/04 06:41:27 UTC	(20051104-3447)
  Log:
  XMLRPC: add atheme.account.get_metadata. not yet tested.

  Changes:	Modified:
  +48 -0	trunk/modules/xmlrpc/account.c (File Modified) 
  +48 -0	trunk/modules/xmlrpc/channel.c (File Modified) 


pfish       2005/11/04 00:55:48 UTC	(20051104-3445)
  Log:
  Let's be consistent with our wallops notifications.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/drop.c (File Modified) 
  +1 -1		trunk/modules/nickserv/drop.c (File Modified) 
  +2 -2		trunk/modules/nickserv/resetpass.c (File Modified) 
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 
  +2 -2		trunk/modules/userserv/resetpass.c (File Modified) 


jilles      2005/11/03 23:52:38 UTC	(20051103-3443)
  Log:
  Allow server notices and notices to channels in P10 protocol modules.
  

  Changes:	Modified:
  +7 -4		trunk/protocol/asuka.c (File Modified) 
  +7 -4		trunk/protocol/bircd.c (File Modified) 
  +7 -4		trunk/protocol/undernet.c (File Modified) 


jilles      2005/11/03 23:37:46 UTC	(20051103-3441)
  Log:
  Allow NULL target for floodcheck(). This will cause
  any warnings to be sent from services's server name.
  

  Changes:	Modified:
  +14 -7	trunk/src/ptasks.c (File Modified) 


jilles      2005/11/03 23:24:58 UTC	(20051103-3439)
  Log:
  Make notice(me.name, ...) work again for ratbox, charybdis and ircnet.
  

  Changes:	Modified:
  +6 -3		trunk/protocol/charybdis.c (File Modified) 
  +6 -3		trunk/protocol/ircnet.c (File Modified) 